...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoalSettings">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/goal_settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
...
                    android:id="@+id/goalsAgeHeader"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/goals_age" />

                <EditText
                    android:id="@+id/goalsAgeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/goals_age_hint"
                    android:inputType="numberDecimal" />

...
