<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/day_action_calendar"
        android:icon="@drawable/action_calendar_icon"
        android:title="@string/action_calendar"
        app:showAsAction="ifRoom" />

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/day_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>