...
        android:layout_marginBottom="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_toolbar">

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_weight="1" />

...
